Finally compiles! Still need to hook up everything in the new API.