@@ -21,7 +21,6 @@ import net.minecraft.core.Holder;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.Connection;
 import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.Difficulty;
 import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.entity.EntitySelector;
@@ -33,7 +32,6 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.biome.Biome;
-import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
@@ -41,11 +39,9 @@ import net.minecraft.world.phys.Vec3;
 
 import com.mojang.authlib.GameProfile;
 
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-
 import forestry.api.IForestryApi;
 import forestry.api.apiculture.BeeManager;
+import forestry.api.apiculture.ForestryBeeSpecies;
 import forestry.api.apiculture.IBeeHousing;
 import forestry.api.apiculture.IBeeHousingInventory;
 import forestry.api.apiculture.IBeeListener;
@@ -53,16 +49,16 @@ import forestry.api.apiculture.IBeeModifier;
 import forestry.api.apiculture.IBeekeepingLogic;
 import forestry.api.apiculture.genetics.IBee;
 import forestry.api.apiculture.genetics.IBeeEffect;
-import forestry.api.apiculture.hives.HiveType;
+import forestry.api.apiculture.genetics.IBeeSpecies;
 import forestry.api.apiculture.hives.IHiveTile;
 import forestry.api.core.HumidityType;
 import forestry.api.core.IErrorLogic;
 import forestry.api.core.TemperatureType;
+import forestry.api.genetics.capability.IIndividualHandlerItem;
 import forestry.apiculture.ModuleApiculture;
 import forestry.apiculture.WorldgenBeekeepingLogic;
 import forestry.apiculture.blocks.BlockBeeHive;
 import forestry.apiculture.features.ApicultureTiles;
-import forestry.apiculture.genetics.BeeDefinition;
 import forestry.core.config.Config;
 import forestry.core.inventory.InventoryAdapter;
 import forestry.core.network.packets.PacketActiveUpdate;
@@ -73,9 +69,6 @@ import forestry.core.utils.ItemStackUtil;
 import forestry.core.utils.NetworkUtil;
 import forestry.core.utils.SpeciesUtil;
 import forestry.core.utils.TickHelper;
-
-import genetics.api.GeneticHelper;
-import forestry.api.genetics.IGenome;
 
 public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IBeeHousing {
 	private static final DamageSource damageSourceBeeHive = new DamageSourceForestry("bee.hive");
@@ -144,37 +137,20 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 
 	public IBee getContainedBee() {
 		if (this.containedBee == null) {
-			IGenome beeGenome = null;
 			ItemStack containedBee = contained.getItem(0);
 			if (!containedBee.isEmpty()) {
-				IBee bee = SpeciesUtil.BEE_TYPE.get().create(containedBee);
-				if (bee != null) {
-					beeGenome = bee.getGenome();
+				if (IIndividualHandlerItem.getIndividual(containedBee) instanceof IBee bee) {
+					return this.containedBee = bee;
 				}
 			}
-			if (beeGenome == null) {
-				beeGenome = getGenomeFromBlock();
+			IBeeSpecies primarySpecies = SpeciesUtil.BEE_TYPE.get().getSpeciesSafe(((BlockBeeHive) getBlockState().getBlock()).getSpeciesId());
+			if (primarySpecies != null) {
+				return this.containedBee = primarySpecies.createIndividual();
 			}
-			if (beeGenome == null) {
-				beeGenome = BeeDefinition.FOREST.getGenome();
-			}
-			this.containedBee = SpeciesUtil.BEE_TYPE.get().create(beeGenome);
+			return this.containedBee = SpeciesUtil.getBeeSpecies(ForestryBeeSpecies.FOREST).createIndividual();
+		} else {
+			return this.containedBee;
 		}
-		return this.containedBee;
-	}
-
-	@Nullable
-	private IGenome getGenomeFromBlock() {
-		if (level.hasChunkAt(worldPosition)) {
-			BlockState blockState = level.getBlockState(worldPosition);
-			Block block = blockState.getBlock();
-			if (block instanceof BlockBeeHive hive) {
-				HiveType hiveType = hive.getType();
-				String speciesUid = hiveType.getSpeciesUid();
-				return GeneticHelper.genomeFromTemplate(speciesUid, SpeciesUtil.BEE_TYPE.get().getDefinition());
-			}
-		}
-		return null;
 	}
 
 	public void setContained(List<ItemStack> bees) {
@@ -237,7 +213,7 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 		int damage = (int) (attackAmount * maxDamage);
 		if (damage > 0) {
 			// Entities are not attacked if they wear a full set of apiarist's armor.
-			int count = BeeManager.armorApiaristHelper.wearsItems(entity, new ResourceLocation(damageSourceBeeHive.msgId), true);
+			int count = BeeManager.armorApiaristHelper.wearsItems(entity, null, true);
 			if (entity.level.random.nextInt(4) >= count) {
 				entity.hurt(damageSourceBeeHive, damage);
 			}
@@ -246,7 +222,7 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 
 	@Override
 	public boolean isActive() {
-		return active;
+		return this.active;
 	}
 
 	@Override
@@ -256,35 +232,33 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 		}
 		this.active = active;
 
-		if (!level.isClientSide) {
-			NetworkUtil.sendNetworkPacket(new PacketActiveUpdate(this), worldPosition, level);
+		if (!this.level.isClientSide) {
+			NetworkUtil.sendNetworkPacket(new PacketActiveUpdate(this), this.worldPosition, this.level);
 		}
 	}
 
-	@Nullable
 	@Override
 	public ClientboundBlockEntityDataPacket getUpdatePacket() {
 		return ClientboundBlockEntityDataPacket.create(this);
 	}
 
-
 	@Override
 	public CompoundTag getUpdateTag() {
 		CompoundTag nbt = super.getUpdateTag();
 		nbt.putBoolean("active", calmTime == 0);
-		beeLogic.write(nbt);
+		this.beeLogic.write(nbt);
 		return nbt;
 	}
 
+	// todo wtf are these two methods (loading from NBT several times per packet)
 	@Override
 	public void handleUpdateTag(CompoundTag tag) {
 		super.handleUpdateTag(tag);
 		setActive(tag.getBoolean("active"));
-		beeLogic.read(tag);
+		this.beeLogic.read(tag);
 	}
 
 	@Override
-	@OnlyIn(Dist.CLIENT)
 	public void onDataPacket(Connection net, ClientboundBlockEntityDataPacket pkt) {
 		super.onDataPacket(net, pkt);
 		CompoundTag nbt = pkt.getTag();
@@ -293,23 +267,22 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 
 	@Override
 	public Iterable<IBeeModifier> getBeeModifiers() {
-		return Collections.emptyList();
+		return List.of();
 	}
 
 	@Override
 	public Iterable<IBeeListener> getBeeListeners() {
-		return Collections.emptyList();
+		return List.of();
 	}
-
 
 	@Override
 	public IBeeHousingInventory getBeeInventory() {
-		return inventory;
+		return this.inventory;
 	}
 
 	@Override
 	public IBeekeepingLogic getBeekeepingLogic() {
-		return beeLogic;
+		return this.beeLogic;
 	}
 
 	@Override
@@ -324,7 +297,7 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 
 	@Override
 	public int getBlockLightValue() {
-		return getLevel().isDay() ? 15 : 0; // hives may have the sky obstructed but should still be active
+		return this.level.isDay() ? 15 : 0; // hives may have the sky obstructed but should still be active
 	}
 
 	@Override
@@ -334,17 +307,17 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 
 	@Override
 	public boolean isRaining() {
-		return level.isRainingAt(getBlockPos().above());
+		return this.level.isRainingAt(this.worldPosition.above());
 	}
 
 	@Override
 	public @Nullable Level getWorldObj() {
-		return level;
+		return this.level;
 	}
 
 	@Override
 	public Holder<Biome> getBiome() {
-		return level.getBiome(getBlockPos());
+		return this.level.getBiome(this.worldPosition);
 	}
 
 	@Override
@@ -355,7 +328,7 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 
 	@Override
 	public Vec3 getBeeFXCoordinates() {
-		BlockPos pos = getBlockPos();
+		BlockPos pos = this.worldPosition;
 		return new Vec3(pos.getX() + 0.5, pos.getY() + 0.25, pos.getZ() + 0.5);
 	}
 
@@ -366,17 +339,10 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 
 	@Override
 	public BlockPos getCoordinates() {
-		return getBlockPos();
+		return this.worldPosition;
 	}
 
-	private static class BeeTargetPredicate implements Predicate<LivingEntity> {
-
-		private final IHiveTile hive;
-
-		public BeeTargetPredicate(IHiveTile hive) {
-			this.hive = hive;
-		}
-
+	private record BeeTargetPredicate(IHiveTile hive) implements Predicate<LivingEntity> {
 		@Override
 		public boolean apply(@Nullable LivingEntity input) {
 			if (input != null && input.isAlive() && !input.isInvisible()) {
@@ -392,5 +358,4 @@ public class TileHive extends BlockEntity implements IHiveTile, IActivatable, IB
 			return false;
 		}
 	}
-
 }
