@@ -1,13 +1,15 @@
 package forestry.core.genetics.analyzer;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.function.Supplier;
 
 import net.minecraft.world.item.ItemStack;
 
 import forestry.api.apiculture.genetics.IBee;
 import forestry.api.arboriculture.genetics.ITree;
+import forestry.api.genetics.IIndividual;
+import forestry.api.genetics.ILifeStage;
+import forestry.api.core.Product;
 import forestry.core.gui.elements.Alignment;
 import forestry.core.gui.elements.DatabaseElement;
 import forestry.core.gui.elements.GuiElementFactory;
@@ -15,48 +17,46 @@ import forestry.core.gui.elements.ItemElement;
 import forestry.core.gui.elements.layouts.FlexLayout;
 import forestry.core.gui.elements.layouts.LayoutHelper;
 
-import genetics.api.individual.IIndividual;
-
-public class ProductsTab extends DatabaseTab {
+public class ProductsTab<I extends IIndividual> extends DatabaseTab<I> {
 	public ProductsTab(Supplier<ItemStack> stackSupplier) {
 		super("products", stackSupplier);
 	}
 
 	@Override
-	public void createElements(DatabaseElement container, IIndividual individual, ItemStack itemStack) {
+	public void createElements(DatabaseElement container, I individual, ILifeStage stage, ItemStack stack) {
 		LayoutHelper groupHelper = container.layoutHelper((x, y) -> GuiElementFactory.horizontal(18, 2, FlexLayout.LEFT_MARGIN), 90, 0);
-		Collection<ItemStack> products = getProducts(individual);
+		List<Product> products = getProducts(individual);
 		if (!products.isEmpty()) {
 			container.translated("for.gui.beealyzer.produce").setAlign(Alignment.TOP_CENTER);
-			products.forEach(product -> groupHelper.add(new ItemElement(0, 0, product)));
+			products.forEach(product -> groupHelper.add(new ItemElement(0, 0, product.createStack())));
 			groupHelper.finish();
 		}
 
-		Collection<ItemStack> specialties = getSpecialties(individual);
+		List<Product> specialties = getSpecialties(individual);
 		if (specialties.isEmpty()) {
 			return;
 		}
 
 		container.translated("for.gui.beealyzer.specialty").setAlign(Alignment.TOP_CENTER);
-		specialties.forEach(specialty -> groupHelper.add(new ItemElement(0, 0, specialty)));
+		specialties.forEach(specialty -> groupHelper.add(new ItemElement(0, 0, specialty.createStack())));
 		groupHelper.finish();
 	}
 
-	private Collection<ItemStack> getSpecialties(IIndividual individual) {
+	private List<Product> getSpecialties(IIndividual individual) {
 		if (individual instanceof IBee bee) {
-			return bee.getSpecialtyList();
+			return bee.getSpecies().getSpecialties();
 		} else if (individual instanceof ITree tree) {
-			return tree.getSpecialties().getPossibleStacks();
+			return tree.getSpecialties();
 		}
-		return Collections.emptyList();
+		return List.of();
 	}
 
-	private Collection<ItemStack> getProducts(IIndividual individual) {
+	private List<Product> getProducts(IIndividual individual) {
 		if (individual instanceof IBee bee) {
-			return bee.getProduceList();
+			return bee.getSpecies().getProducts();
 		} else if (individual instanceof ITree tree) {
-			return tree.getProducts().getPossibleStacks();
+			return tree.getProducts();
 		}
-		return Collections.emptyList();
+		return List.of();
 	}
 }
